force-app/main/default/objects/Plan_Hierarchy__c/Plan_Hierarchy__c.object-meta.xml
<CustomObject>
    <label>Plan Hierarchy</label>
    <nameField>
        <displayFormat>PH-{000}</displayFormat>
        <label>Plan Hierarchy Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plan Hierarchy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>