force-app/main/default/objects/Plan_Hierarchy__c/fields/Dataset1__c.field-meta.xml
<CustomField>
    <fullName>Dataset1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dataset1</label>
    <referenceTo>Dataset1__c</referenceTo>
    <relationshipLabel>Plan Hierarchy</relationshipLabel>
    <relationshipName>Plan_Hierarchy</relationshipName>
    <type>Lookup</type>
</CustomField>