force-app/main/default/objects/Plan_Hierarchy__c/fields/Dataset2__c.field-meta.xml
<CustomField>
    <fullName>Dataset2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dataset2</label>
    <referenceTo>Dataset2__c</referenceTo>
    <relationshipLabel>Plan Hierarchy</relationshipLabel>
    <relationshipName>Plan_Hierarchy</relationshipName>
    <type>Lookup</type>
</CustomField>