force-app/main/default/objects/Plan_Hierarchy__c/recordTypes/Recordtype2.recordType-meta.xml
<RecordType>
    <fullName>Recordtype2</fullName>
    <active>true</active>
    <label>Recordtype2</label>
</RecordType>